Coconut-assignment-5/target/generated-sources/ant4/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.7.2


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ExprParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgramContext::PROGRAM() {
  return getToken(ExprParser::PROGRAM, 0);
}

tree::TerminalNode* ExprParser::ProgramContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::ProgramContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

ExprParser::StatementContext* ExprParser::ProgramContext::statement() {
  return getRuleContext<ExprParser::StatementContext>(0);
}

tree::TerminalNode* ExprParser::ProgramContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}


size_t ExprParser::ProgramContext::getRuleIndex() const {
  return ExprParser::RuleProgram;
}


antlrcpp::Any ExprParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgramContext* ExprParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(ExprParser::PROGRAM);
    setState(37);
    match(ExprParser::IDENTIFIER);
    setState(38);
    match(ExprParser::SEMICOLON);
    setState(39);
    statement();
    setState(40);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundstatementContext ------------------------------------------------------------------

ExprParser::CompoundstatementContext::CompoundstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::CompoundstatementContext::BEGIN() {
  return getToken(ExprParser::BEGIN, 0);
}

tree::TerminalNode* ExprParser::CompoundstatementContext::END() {
  return getToken(ExprParser::END, 0);
}

tree::TerminalNode* ExprParser::CompoundstatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

tree::TerminalNode* ExprParser::CompoundstatementContext::PERIOD() {
  return getToken(ExprParser::PERIOD, 0);
}

std::vector<ExprParser::StatementContext *> ExprParser::CompoundstatementContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::CompoundstatementContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}


size_t ExprParser::CompoundstatementContext::getRuleIndex() const {
  return ExprParser::RuleCompoundstatement;
}


antlrcpp::Any ExprParser::CompoundstatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitCompoundstatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::CompoundstatementContext* ExprParser::compoundstatement() {
  CompoundstatementContext *_localctx = _tracker.createInstance<CompoundstatementContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleCompoundstatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    match(ExprParser::BEGIN);
    setState(44); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(43);
      statement();
      setState(46); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::BEGIN)
      | (1ULL << ExprParser::CASE)
      | (1ULL << ExprParser::FOR)
      | (1ULL << ExprParser::IF)
      | (1ULL << ExprParser::REPEAT)
      | (1ULL << ExprParser::WHILE)
      | (1ULL << ExprParser::WRITE)
      | (1ULL << ExprParser::WRITELN))) != 0) || ((((_la - 75) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 75)) & ((1ULL << (ExprParser::LPAREN - 75))
      | (1ULL << (ExprParser::IDENTIFIER - 75))
      | (1ULL << (ExprParser::INTEGER - 75))
      | (1ULL << (ExprParser::REAL - 75))
      | (1ULL << (ExprParser::CHARACTER - 75)))) != 0));
    setState(48);
    match(ExprParser::END);
    setState(49);
    _la = _input->LA(1);
    if (!(_la == ExprParser::SEMICOLON

    || _la == ExprParser::PERIOD)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignstatementContext ------------------------------------------------------------------

ExprParser::AssignstatementContext::AssignstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::VariableContext* ExprParser::AssignstatementContext::variable() {
  return getRuleContext<ExprParser::VariableContext>(0);
}

tree::TerminalNode* ExprParser::AssignstatementContext::ASSIGN() {
  return getToken(ExprParser::ASSIGN, 0);
}

ExprParser::ExprContext* ExprParser::AssignstatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::AssignstatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}


size_t ExprParser::AssignstatementContext::getRuleIndex() const {
  return ExprParser::RuleAssignstatement;
}


antlrcpp::Any ExprParser::AssignstatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitAssignstatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::AssignstatementContext* ExprParser::assignstatement() {
  AssignstatementContext *_localctx = _tracker.createInstance<AssignstatementContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleAssignstatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    variable();
    setState(52);
    match(ExprParser::ASSIGN);
    setState(53);
    expr(0);
    setState(54);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RepeatstatementContext ------------------------------------------------------------------

ExprParser::RepeatstatementContext::RepeatstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::RepeatstatementContext::REPEAT() {
  return getToken(ExprParser::REPEAT, 0);
}

tree::TerminalNode* ExprParser::RepeatstatementContext::UNTIL() {
  return getToken(ExprParser::UNTIL, 0);
}

ExprParser::ExprContext* ExprParser::RepeatstatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::RepeatstatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

std::vector<ExprParser::StatementContext *> ExprParser::RepeatstatementContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::RepeatstatementContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}


size_t ExprParser::RepeatstatementContext::getRuleIndex() const {
  return ExprParser::RuleRepeatstatement;
}


antlrcpp::Any ExprParser::RepeatstatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitRepeatstatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::RepeatstatementContext* ExprParser::repeatstatement() {
  RepeatstatementContext *_localctx = _tracker.createInstance<RepeatstatementContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleRepeatstatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(ExprParser::REPEAT);
    setState(58); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(57);
      statement();
      setState(60); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::BEGIN)
      | (1ULL << ExprParser::CASE)
      | (1ULL << ExprParser::FOR)
      | (1ULL << ExprParser::IF)
      | (1ULL << ExprParser::REPEAT)
      | (1ULL << ExprParser::WHILE)
      | (1ULL << ExprParser::WRITE)
      | (1ULL << ExprParser::WRITELN))) != 0) || ((((_la - 75) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 75)) & ((1ULL << (ExprParser::LPAREN - 75))
      | (1ULL << (ExprParser::IDENTIFIER - 75))
      | (1ULL << (ExprParser::INTEGER - 75))
      | (1ULL << (ExprParser::REAL - 75))
      | (1ULL << (ExprParser::CHARACTER - 75)))) != 0));
    setState(62);
    match(ExprParser::UNTIL);
    setState(63);
    expr(0);
    setState(64);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhilestatementContext ------------------------------------------------------------------

ExprParser::WhilestatementContext::WhilestatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::WhilestatementContext::WHILE() {
  return getToken(ExprParser::WHILE, 0);
}

ExprParser::ExprContext* ExprParser::WhilestatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::WhilestatementContext::DO() {
  return getToken(ExprParser::DO, 0);
}

ExprParser::StatementContext* ExprParser::WhilestatementContext::statement() {
  return getRuleContext<ExprParser::StatementContext>(0);
}


size_t ExprParser::WhilestatementContext::getRuleIndex() const {
  return ExprParser::RuleWhilestatement;
}


antlrcpp::Any ExprParser::WhilestatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitWhilestatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::WhilestatementContext* ExprParser::whilestatement() {
  WhilestatementContext *_localctx = _tracker.createInstance<WhilestatementContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleWhilestatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(ExprParser::WHILE);
    setState(67);
    expr(0);
    setState(68);
    match(ExprParser::DO);
    setState(69);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForstatementContext ------------------------------------------------------------------

ExprParser::ForstatementContext::ForstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ForstatementContext::FOR() {
  return getToken(ExprParser::FOR, 0);
}

ExprParser::VariableContext* ExprParser::ForstatementContext::variable() {
  return getRuleContext<ExprParser::VariableContext>(0);
}

tree::TerminalNode* ExprParser::ForstatementContext::ASSIGN() {
  return getToken(ExprParser::ASSIGN, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::ForstatementContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::ForstatementContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

tree::TerminalNode* ExprParser::ForstatementContext::DO() {
  return getToken(ExprParser::DO, 0);
}

ExprParser::StatementContext* ExprParser::ForstatementContext::statement() {
  return getRuleContext<ExprParser::StatementContext>(0);
}

tree::TerminalNode* ExprParser::ForstatementContext::TO() {
  return getToken(ExprParser::TO, 0);
}

tree::TerminalNode* ExprParser::ForstatementContext::DOWNTO() {
  return getToken(ExprParser::DOWNTO, 0);
}


size_t ExprParser::ForstatementContext::getRuleIndex() const {
  return ExprParser::RuleForstatement;
}


antlrcpp::Any ExprParser::ForstatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitForstatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ForstatementContext* ExprParser::forstatement() {
  ForstatementContext *_localctx = _tracker.createInstance<ForstatementContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleForstatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(ExprParser::FOR);
    setState(72);
    variable();
    setState(73);
    match(ExprParser::ASSIGN);
    setState(74);
    expr(0);
    setState(75);
    _la = _input->LA(1);
    if (!(_la == ExprParser::DOWNTO

    || _la == ExprParser::TO)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(76);
    expr(0);
    setState(77);
    match(ExprParser::DO);
    setState(78);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfstatementContext ------------------------------------------------------------------

ExprParser::IfstatementContext::IfstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::IfstatementContext::IF() {
  return getToken(ExprParser::IF, 0);
}

ExprParser::ExprContext* ExprParser::IfstatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::IfstatementContext::THEN() {
  return getToken(ExprParser::THEN, 0);
}

std::vector<ExprParser::StatementContext *> ExprParser::IfstatementContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::IfstatementContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}

tree::TerminalNode* ExprParser::IfstatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

tree::TerminalNode* ExprParser::IfstatementContext::ELSE() {
  return getToken(ExprParser::ELSE, 0);
}


size_t ExprParser::IfstatementContext::getRuleIndex() const {
  return ExprParser::RuleIfstatement;
}


antlrcpp::Any ExprParser::IfstatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitIfstatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::IfstatementContext* ExprParser::ifstatement() {
  IfstatementContext *_localctx = _tracker.createInstance<IfstatementContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleIfstatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(ExprParser::IF);
    setState(81);
    expr(0);
    setState(82);
    match(ExprParser::THEN);
    setState(83);
    statement();
    setState(86);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::ELSE) {
      setState(84);
      match(ExprParser::ELSE);
      setState(85);
      statement();
    }
    setState(88);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CasestatementContext ------------------------------------------------------------------

ExprParser::CasestatementContext::CasestatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::CasestatementContext::CASE() {
  return getToken(ExprParser::CASE, 0);
}

ExprParser::ExprContext* ExprParser::CasestatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::CasestatementContext::OF() {
  return getToken(ExprParser::OF, 0);
}

tree::TerminalNode* ExprParser::CasestatementContext::END() {
  return getToken(ExprParser::END, 0);
}

tree::TerminalNode* ExprParser::CasestatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

std::vector<ExprParser::CaselistContext *> ExprParser::CasestatementContext::caselist() {
  return getRuleContexts<ExprParser::CaselistContext>();
}

ExprParser::CaselistContext* ExprParser::CasestatementContext::caselist(size_t i) {
  return getRuleContext<ExprParser::CaselistContext>(i);
}


size_t ExprParser::CasestatementContext::getRuleIndex() const {
  return ExprParser::RuleCasestatement;
}


antlrcpp::Any ExprParser::CasestatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitCasestatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::CasestatementContext* ExprParser::casestatement() {
  CasestatementContext *_localctx = _tracker.createInstance<CasestatementContext>(_ctx, getState());
  enterRule(_localctx, 14, ExprParser::RuleCasestatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(ExprParser::CASE);
    setState(91);
    expr(0);
    setState(92);
    match(ExprParser::OF);
    setState(94); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(93);
      caselist();
      setState(96); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 75) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 75)) & ((1ULL << (ExprParser::LPAREN - 75))
      | (1ULL << (ExprParser::IDENTIFIER - 75))
      | (1ULL << (ExprParser::INTEGER - 75))
      | (1ULL << (ExprParser::REAL - 75))
      | (1ULL << (ExprParser::CHARACTER - 75)))) != 0));
    setState(98);
    match(ExprParser::END);
    setState(99);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CaselistContext ------------------------------------------------------------------

ExprParser::CaselistContext::CaselistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::ExprContext* ExprParser::CaselistContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::CaselistContext::COLON() {
  return getToken(ExprParser::COLON, 0);
}

ExprParser::StatementContext* ExprParser::CaselistContext::statement() {
  return getRuleContext<ExprParser::StatementContext>(0);
}


size_t ExprParser::CaselistContext::getRuleIndex() const {
  return ExprParser::RuleCaselist;
}


antlrcpp::Any ExprParser::CaselistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitCaselist(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::CaselistContext* ExprParser::caselist() {
  CaselistContext *_localctx = _tracker.createInstance<CaselistContext>(_ctx, getState());
  enterRule(_localctx, 16, ExprParser::RuleCaselist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    expr(0);
    setState(102);
    match(ExprParser::COLON);
    setState(103);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ExprParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::CompoundstatementContext* ExprParser::StatementContext::compoundstatement() {
  return getRuleContext<ExprParser::CompoundstatementContext>(0);
}

ExprParser::AssignstatementContext* ExprParser::StatementContext::assignstatement() {
  return getRuleContext<ExprParser::AssignstatementContext>(0);
}

ExprParser::RepeatstatementContext* ExprParser::StatementContext::repeatstatement() {
  return getRuleContext<ExprParser::RepeatstatementContext>(0);
}

ExprParser::WhilestatementContext* ExprParser::StatementContext::whilestatement() {
  return getRuleContext<ExprParser::WhilestatementContext>(0);
}

ExprParser::ForstatementContext* ExprParser::StatementContext::forstatement() {
  return getRuleContext<ExprParser::ForstatementContext>(0);
}

ExprParser::IfstatementContext* ExprParser::StatementContext::ifstatement() {
  return getRuleContext<ExprParser::IfstatementContext>(0);
}

ExprParser::CasestatementContext* ExprParser::StatementContext::casestatement() {
  return getRuleContext<ExprParser::CasestatementContext>(0);
}

ExprParser::WriteContext* ExprParser::StatementContext::write() {
  return getRuleContext<ExprParser::WriteContext>(0);
}

tree::TerminalNode* ExprParser::StatementContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

ExprParser::WritelnContext* ExprParser::StatementContext::writeln() {
  return getRuleContext<ExprParser::WritelnContext>(0);
}

ExprParser::ExprContext* ExprParser::StatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}


size_t ExprParser::StatementContext::getRuleIndex() const {
  return ExprParser::RuleStatement;
}


antlrcpp::Any ExprParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::StatementContext* ExprParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, ExprParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(105);
      compoundstatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(106);
      assignstatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(107);
      repeatstatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(108);
      whilestatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(109);
      forstatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(110);
      ifstatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(111);
      casestatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(112);
      write();
      setState(114);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(113);
        match(ExprParser::SEMICOLON);
        break;
      }
